2008-03-04  Mike Krüger <mkrueger@novell.com> 

	* gtk-gui/MonoDevelop.DesignerSupport.Toolbox.ComponentSelectorDialog.cs,
	  gtk-gui/gui.stetic,
	  MonoDevelop.DesignerSupport.Toolbox/ComponentSelectorDialog.cs: Worked
	  on gnome hig compliant alerts.

2008-02-29  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.DesignerSupport.Toolbox/ToolboxWidget.cs: fixes tooltip bug.

2008-02-29  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.DesignerSupport.Toolbox/ToolboxWidget.cs: Ctrl+F1 work now in
	  the toolbox.

2008-02-28  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.DesignerSupport.Toolbox/Toolbox.cs,
	  MonoDevelop.DesignerSupport.Toolbox/ToolboxWidget.cs,
	  MonoDevelop.DesignerSupport.Toolbox/CategoryToolboxNode.cs: Fixed "Bug
	  365624 - Widget toolbox are shown unsorted".

2008-02-27  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.DesignerSupport.Toolbox/ItemToolboxNode.cs: Fixed comparer bug

2008-02-27  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.DesignerSupport/ToolboxService.cs,
	  MonoDevelop.DesignerSupport.Toolbox/Toolbox.cs,
	  MonoDevelop.DesignerSupport.Toolbox/CategoryToolboxNode.cs,
	  MonoDevelop.DesignerSupport.Toolbox/ToolboxWidget.cs,
	  MonoDevelop.DesignerSupport.Toolbox/IToolboxProvider.cs: Worked on
	  category support for the toolbox service.

2008-02-27  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.DesignerSupport.Toolbox/ToolboxWidget.cs: Fixed
	  nullrefexception.

2008-02-24  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.DesignerSupport.Toolbox/Toolbox.cs,
	  MonoDevelop.DesignerSupport.Toolbox/ToolboxWidget.cs: Label is now taken
	  as tooltip, when Description is not set.

2008-02-23  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.DesignerSupport.mdp, Makefile.am: Removed some unused glade
	  and gnome-sharp references (only the unused). But I'll continue to
	  remove glade, we need to lower the dependency tree a bit.

2008-02-22  Mike Krüger <mkrueger@novell.com> 
